css/estimator.css
:root {
  --blue: #266d93;
  --grey-extra-light: #f9f9f9;
  --grey-light: #f0f0f0;
  --grey-mid: #e0e0e0;
  --grey-dark: #e0e0e0;
  --grey-extra-dark: #808080;
  --green: #44aa44;
  --green-light: #eaffea;
  --red: #931621;
  --company-color: #8512a1;
  --company-color-extra-light: #eb9aff54;
  --company-color-light: #b718dfcb;
  --company-color-medium-dark: #611175;
  --company-color-dark: #4f0d5f;
  --card-selected: #8512a1;
  --vred: #E84249;
  --vgreen: #62BDA4;
  --vblue: #092168;
  --vgrey: #606060;
  --vgrey-light: #e9e9e9;
}


@font-face {
  font-family: graphik-regular;
  src: url("../fonts/Graphik-Regular.otf") format("opentype");
}

@font-face {
  font-family: graphik;
  src: url("../fonts/Graphik-Medium.otf") format("opentype");
}

@font-face {
  font-family: lora-italic;
  src: url("../fonts/Lora-Italic-VariableFont_wght.ttf") format("truetype");
}

@font-face {
  font-family: lora;
  src: url("../fonts/Lora-VariableFont_wght.ttf") format("truetype");
}


#estimatorsection {
  font-family: graphik-regular;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  color: #777777;
}

#estimatorsection p {
  color: #000000;
}

#estimatorsection #pos-left {
  display: inline;
}

#estimatorsection #pos-above {
  display: none;
}

#estimatorsection .header {
  font-weight: bold;
}

#estimatorsection .v {
  font-size: 40px;
  /* text-align: center; */
  /* color: var(--vred); */
  color: var(--vgrey);
  font-weight: bold;
}

#estimatorsection #ptv span.note {
  font-size: 13px;
}

#estimatorsection #cost_per_fte {
  font-size: 13px;
}

#estimatorsection #cost_per_fte input {
  max-width: 60px;
}

#estimatorsection .summary {
  font-size: 10px;
  color: #444444;
}

#estimatorsection .category-group {
  display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: repeat(5, 1fr);
  justify-items: center;
  justify-content: center;
}

#estimatorsection .category {
  border-radius: 20%;
  font-size: 13px;
  background-color: var(--c, #ffffff);
  box-sizing: border-box;
  width: 100px;
  height: 100px;
  padding: 10px;
  text-align: center;

  display: grid;
  grid-template-rows: repeat(2, auto);
  grid-template-columns: 1fr;
  justify-items: center;
  justify-content: center;
  align-content: center;
  gap: 5px;
  /* display: flex; */
  /* align-items: center; */
  /* justify-content: center; */
}

#estimatorsection .usecase {
  font-size: 12px;
  border-radius: 20%;
  font-weight: bold;
  color: #000000;
  border: 3px solid var(--c, #000000);
  box-sizing: border-box;
  width: 100px;
  height: 100px;
  padding: 10px;
  text-align: center;
  transition: 0.25s; 

  display: flex;
  justify-content: center;
  align-items: center;
}

#estimatorsection .usecase.selected {
  color: #ffffff;
  background-color: var(--c, #000000);
}

#estimatorsection .selected-icon {
  font-size: 22px;
  position: absolute;
  color: var(--c, #000000);
  background-color: #ffffff;
  display: none;
  border-radius: 50%;
}

#estimatorsection .usecase:hover {
  /* border: 1px solid var(--c, #000000); */
  box-shadow: 0 0 8px rgb(12 10 10 / 80%);
}

#estimatorsection #usecases {
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: repeat(3, auto);
  justify-items: center;
  /* justify-content: center; */
  align-content: start;
}

#estimatorsection #usecases, #estimatorsection .category-group {
  gap: 10px;
}

#estimatorsection #display {
  box-sizing: border-box;
  width: 100%;
  max-width: 400px;
  /* width: 400px; */
}

#estimatorsection #overview {
  box-sizing: border-box;
  width: 100%;
  padding: 25px 15px;
  border: 0.5px solid #cccccc;
  border-radius: 15px;
  display: grid;
  align-content: center;
}

#estimatorsection #overview p {
  margin-top: 0;
  margin-bottom: 0;
}

#estimatorsection #form {
  float: left;
  width: 50%;
  margin: 0 auto;
}

#estimatorsection #estimator {
  box-sizing: border-box;
  width: 100%;
  display: grid;
  /* grid-template-columns: minmax(auto, 1fr) 1fr; */
  grid-template-columns: auto auto;
  grid-template-rows: auto auto;
  justify-items: center;
  /* justify-content: center; */
  justify-content: space-evenly;
  align-content: start;
  column-gap: 50px;
  row-gap: 45px;
}

#estimatorsection #welcome-note {
  box-sizing: border-box;
  width: 540px;
  font-size: 13px;
  margin-bottom: 30px;
  padding: 15px 15px 15px 15px;
}

#estimatorsection .clickable:hover, #estimatorsection .button:hover {
  cursor: pointer;
}

#estimatorsection .button {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 30px;
  /* width: 180px; */
  width: 100%;
  font-weight: bold;
  border: 1px solid var(--vgrey);
  border-radius: 15px;
  font-size: 14px;
  background-color: var(--c, #ffffff);
  color: var(--t, var(--vgrey));
  padding: 0 10px;
}

#estimatorsection .button-group {
  display: grid;
  grid-template-columns: repeat(var(--n, 2), auto);
  justify-items: center;
  justify-content: center;
  gap: 10px;
  /* margin-top: 60px; */
}

#estimatorsection #finish-buttons {
  display: none;
  margin-top: 50px;
}

#estimatorsection .button img {
  height: 15px;
  margin-right: 10px;
}

#estimatorsection #adder {
  box-sizing: border-box;
  display: none;
  width: 540px;
  padding: 0 50px;
}

#estimatorsection #adder .title2 {
  font-size: 22px;
  margin: 0px;
  color: var(--c, #505050);
  font-weight: bold;
}

#estimatorsection #adder .description {
  font-size: 14px;
  color: var(--vgrey);
}

#estimatorsection #adder .prompt {
  font-size: 13px;
  color: var(--vgrey);
}

#estimatorsection #mob-grid-button {
  position: relative;
}

#estimatorsection #infobox {
  font-size: 14px;
  box-sizing: border-box;
  max-width: 300px;
  padding: 10px;
  position: absolute;
  display: none;
  opacity: 0;
  background-color: var(--grey-light);
  border: 1px solid var(--grey-mid);
  z-index: 1;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
}
/* ... */

